移除koa-static，导入mime、mz

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon bin/www",
+    "dev": "nodemon bin/www --dev",
     "debug": "nodemon --inspect bin/www",
     "serve": "./node_modules/.bin/nodemon bin/www",
     "start": "node bin/www",
@@ -26,7 +26,6 @@
     "koa-multer": "^1.0.2",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "marked": "^0.7.0",
     "md5": "^2.2.1",
@@ -42,6 +41,8 @@
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
+    "mime": "^2.4.4",
+    "mz": "^2.7.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
     "raven": "^2.6.4",
