--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-multer": "^1.0.2",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "marked": "^0.7.0",
     "md5": "^2.2.1",
