--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,12 @@
 {
-    "printWidth": 150,
-    "semi": false,
-    "tabWidth": 4,
-    "singleQuote": true,
-    "trailingComma": "none",
-    "endOfLine": "auto"
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": false,
+  "singleQuote": false,
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "printWidth": 150,
+  "endOfLine": "auto"
 }
