--- a/package.json
+++ b/package.json
@@ -1,73 +1,112 @@
 {
-  "name": "mmf-blog-api-koa2-v2",
-  "version": "2.0.0",
-  "license": "MIT",
+  "name": "koa2-vue-ssr-demo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon bin/www --dev",
-    "debug": "nodemon --inspect bin/www",
-    "serve": "./node_modules/.bin/nodemon bin/www",
-    "start": "node bin/www",
-    "pm2": "pm2 start bin/run",
-    "lint": "eslint --ext .js server/ --fix"
+    "test": "mocha --recursive ./specs/",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:server": "webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "build:client": "webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "server": "node server.js",
+    "lint": "eslint --ext .js --ext .html --ext .vue src/ build/",
+    "lint-report": "eslint --ext .js --ext .html --ext.vue src/ build/ -f node_modules/eslint-html-reporter/reporter.js -o code-lint/index.html",
+    "nyc": "nyc --reporter=text --reporter=text-summary --reporter=json-summary npm run test",
+    "lint-fix": "eslint --fix --ext .js --ext .html --ext .vue src/ build/"
   },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "baidu-aip-sdk": "^2.4.4",
-    "debug": "^4.1.1",
-    "ejs": "^2.7.1",
-    "highlight.js": "^9.16.2",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.11.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-convert": "^1.2.0",
-    "koa-json": "^2.0.2",
-    "koa-logger": "^3.2.1",
-    "koa-multer": "^1.0.2",
-    "koa-onerror": "^4.1.0",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
-    "koa-views": "^6.2.1",
-    "marked": "^0.7.0",
-    "md5": "^2.2.1",
-    "moment": "^2.24.0",
-    "mongoose": "^5.7.7",
-    "mongoose-autopopulate": "^0.9.1",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5"
-  },
-  "devDependencies": {
-    "eslint-config-lcy-js": "^3.0.9",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.4.2",
-    "mime": "^2.4.4",
-    "mz": "^2.7.0",
-    "nodemon": "^1.19.4",
-    "prettier": "^1.18.2",
-    "raven": "^2.6.4",
-    "should": "^13.2.3"
-  },
-  "engines": {
-    "node": ">= 8.6.0",
-    "npm": ">= 5.0.0"
-  },
-  "browserslist": [
-    "> 0.1%",
-    "last 3 versions",
-    "not ie <= 8",
-    "iOS > 8"
-  ],
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
+  "nyc": {
+    "include": [
+      "server/**/*.js",
+      "src/**/*.js"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "axios": "^0.16.2",
+    "babel-loader": "^8.0.4",
+    "cross-env": "^4.0.0",
+    "es6-promise": "^4.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "fs": "0.0.1-security",
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "koa": "^2.2.0",
+    "koa-router": "7.1.1",
+    "koa-send": "^4.1.0",
+    "koa-static": "^5.0.0",
+    "koa-webpack": "^5.1.1",
+    "koa-webpack-middleware-zm": "^0.0.4",
+    "lru-cache": "^4.0.2",
+    "node-fetch": "^1.6.3",
+    "path": "^0.12.7",
+    "schema-utils": "^0.4.5",
+    "serialize-javascript": "^1.3.0",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "vue": "^2.3.3",
+    "vue-loader": "^15.4.2",
+    "vue-router": "^2.5.3",
+    "vue-server-renderer": "^2.3.3",
+    "vue-template-compiler": "^2.5.17",
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^4.1.2",
+    "webpack": "^4.26.1",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-html-reporter": "^0.5.2",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "expect.js": "^0.3.1",
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
+    "webpack-cli": "^3.1.2",
+    "autoprefixer": "^7.0.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.4.0",
+    "co": "^4.6.0",
+    "css-loader": "^0.28.1",
+    "cz-conventional-changelog": "^2.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-vue": "^2.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "format-webpack-stats-errors-warnings": "^2.1.0",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "fs-extra": "^3.0.1",
+    "ghooks": "^2.0.0",
+    "html-minifier": "^3.4.4",
+    "html-webpack-plugin": "^2.28.0",
+    "koa-static": "^4.0.2",
+    "rimraf": "^2.6.1",
+    "source-list-map": "^2.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "sw-precache-webpack-plugin": "^0.11.0",
+    "url-loader": "^0.5.8",
+    "validate-commit-msg": "^2.12.1",
+    "vue-loader": "^12.0.3",
+    "vue-template-compiler": "^2.3.3",
+    "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.5.4"
   }
 }
