--- a/package.json
+++ b/package.json
@@ -23,11 +23,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
     "axios": "^0.16.2",
-    "babel-loader": "^8.0.4",
     "cross-env": "^4.0.0",
     "es6-promise": "^4.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -35,12 +31,10 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "fs": "0.0.1-security",
-    "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "koa": "^2.2.0",
     "koa-router": "7.1.1",
     "koa-send": "^4.1.0",
-    "koa-static": "^5.0.0",
     "koa-webpack": "^5.1.1",
     "koa-webpack-middleware-zm": "^0.0.4",
     "lru-cache": "^4.0.2",
@@ -48,19 +42,16 @@
     "path": "^0.12.7",
     "schema-utils": "^0.4.5",
     "serialize-javascript": "^1.3.0",
-    "sw-precache-webpack-plugin": "^0.11.5",
     "vue": "^2.3.3",
-    "vue-loader": "^15.4.2",
     "vue-router": "^2.5.3",
     "vue-server-renderer": "^2.3.3",
-    "vue-template-compiler": "^2.5.17",
     "vuex": "^2.3.1",
-    "vuex-router-sync": "^4.1.2",
-    "webpack": "^4.26.1",
-    "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2"
+    "vuex-router-sync": "^4.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-html-reporter": "^0.5.2",
@@ -75,7 +66,7 @@
     "autoprefixer": "^7.0.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.4.0",
     "co": "^4.6.0",
@@ -92,21 +83,21 @@
     "fs-extra": "^3.0.1",
     "ghooks": "^2.0.0",
     "html-minifier": "^3.4.4",
-    "html-webpack-plugin": "^2.28.0",
-    "koa-static": "^4.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "koa-static": "^5.0.0",
     "rimraf": "^2.6.1",
     "source-list-map": "^2.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "sw-precache-webpack-plugin": "^0.11.0",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^0.5.8",
     "validate-commit-msg": "^2.12.1",
-    "vue-loader": "^12.0.3",
-    "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.5.1",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.26.1",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.5.4"
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
