--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "mocha --recursive ./specs/",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:server": "webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "build:client": "webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "server": "node server.js",
     "lint": "eslint --ext .js --ext .html --ext .vue src/ build/",
     "lint-report": "eslint --ext .js --ext .html --ext.vue src/ build/ -f node_modules/eslint-html-reporter/reporter.js -o code-lint/index.html",
