--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "dev": "cross-env NODE_ENV=production nodemon server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
     "start": "node server.js",
     "lint": "eslint --ext .js --ext .html --ext .vue src/ build/",
     "lint-report": "eslint --ext .js --ext .html --ext.vue src/ build/ -f node_modules/eslint-html-reporter/reporter.js -o code-lint/index.html",
