--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs": "0.0.1-security",
     "json-loader": "^0.5.7",
     "koa": "^2.2.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-router": "7.1.1",
     "koa-send": "^4.1.0",
