--- a/package.json
+++ b/package.json
@@ -56,17 +56,6 @@
     "@babel/core": "^7.1.6",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-html-reporter": "^0.5.2",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "expect.js": "^0.3.1",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "webpack-cli": "^3.1.2",
     "autoprefixer": "^7.0.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
@@ -77,9 +66,17 @@
     "css-loader": "^0.28.1",
     "cz-conventional-changelog": "^2.0.0",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-vue": "^2.0.2",
+    "eslint-html-reporter": "^0.5.2",
     "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-vue": "^2.0.1",
+    "expect.js": "^0.3.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "format-webpack-stats-errors-warnings": "^2.1.0",
@@ -89,6 +86,9 @@
     "html-minifier": "^3.4.4",
     "html-webpack-plugin": "^3.2.0",
     "koa-static": "^5.0.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^2.0.4",
+    "nyc": "^13.1.0",
     "rimraf": "^2.6.1",
     "source-list-map": "^2.0.0",
     "stylus": "^0.54.5",
@@ -99,9 +99,10 @@
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.26.1",
-    "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.4",
+    "webpack-node-externals": "^1.7.2"
   }
 }
