--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "json-loader": "^0.5.7",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-compress": "^5.0.1",
     "koa-logger": "^3.2.1",
     "koa-router": "7.1.1",
     "koa-send": "^4.1.0",
