--- a/package.json
+++ b/package.json
@@ -54,15 +54,14 @@
     "vuex-router-sync": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "autoprefixer": "^7.0.1",
-    "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.4.0",
     "co": "^4.6.0",
     "css-loader": "^0.28.1",
     "cz-conventional-changelog": "^2.0.0",
