--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "mocha": "^5.2.0",
     "nodemon": "^2.0.4",
     "nyc": "^13.1.0",
+    "open": "^7.2.1",
     "rimraf": "^2.6.1",
     "source-list-map": "^2.0.0",
     "stylus": "^0.54.5",
