--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "url-loader": "^0.5.8",
     "validate-commit-msg": "^2.12.1",
     "vue-loader": "^15.4.2",
+    "vue-loader-plugin": "^1.3.0",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
