--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "co": "^4.6.0",
     "css-loader": "^0.28.1",
     "cz-conventional-changelog": "^2.0.0",
@@ -77,6 +78,7 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-vue": "^2.0.1",
     "expect.js": "^0.3.1",
+    "extract-css-chunks-webpack-plugin": "^4.7.5",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "format-webpack-stats-errors-warnings": "^2.1.0",
@@ -85,11 +87,15 @@
     "ghooks": "^2.0.0",
     "html-minifier": "^3.4.4",
     "html-webpack-plugin": "^3.2.0",
+    "ip": "^1.1.5",
     "koa-static": "^5.0.0",
+    "koa-webpack-dev-middleware": "^2.0.2",
+    "koa-webpack-hot-middleware": "^1.0.3",
     "mocha": "^5.2.0",
     "nodemon": "^2.0.4",
     "nyc": "^13.1.0",
     "open": "^7.2.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "rimraf": "^2.6.1",
     "source-list-map": "^2.0.0",
     "stylus": "^0.54.5",
