--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,8 @@
 {
     "presets": [
-        ["@babel/preset-env", {
-            "useBuiltIns":false
-        }]
+      "@babel/preset-env"
     ],
     "plugins": [
-        "@babel/plugin-transform-runtime"
+      "dynamic-import-webpack"
     ]
 }
