--- a/package.json
+++ b/package.json
@@ -4,112 +4,43 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive ./specs/",
-    "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "dev": "cross-env NODE_ENV=development nodemon ./server/index.js",
-    "start": "node server.js",
-    "lint": "eslint --ext .js --ext .html --ext .vue src/ build/",
-    "lint-report": "eslint --ext .js --ext .html --ext.vue src/ build/ -f node_modules/eslint-html-reporter/reporter.js -o code-lint/index.html",
-    "nyc": "nyc --reporter=text --reporter=text-summary --reporter=json-summary npm run test",
-    "lint-fix": "eslint --fix --ext .js --ext .html --ext .vue src/ build/"
-  },
-  "nyc": {
-    "include": [
-      "server/**/*.js",
-      "src/**/*.js"
-    ]
+    "start": "node server/server.js",
+    "dev": "webpack-dev-server",
+    "build:client": "webpack --config config/webpack.client.config.js",
+    "build:server": "webpack --config config/webpack.server.config.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.16.2",
-    "cross-env": "^4.0.0",
-    "es6-promise": "^4.1.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "fs": "0.0.1-security",
-    "json-loader": "^0.5.7",
-    "koa": "^2.2.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-compress": "^5.0.1",
-    "koa-logger": "^3.2.1",
-    "koa-router": "7.1.1",
-    "koa-send": "^4.1.0",
-    "koa-webpack": "^5.1.1",
-    "koa-webpack-middleware-zm": "^0.0.4",
-    "lru-cache": "^4.0.2",
-    "moment": "^2.28.0",
-    "node-fetch": "^1.6.3",
-    "path": "^0.12.7",
-    "schema-utils": "^0.4.5",
-    "serialize-javascript": "^1.3.0",
-    "vue": "^2.3.3",
-    "vue-router": "^2.5.3",
-    "vue-server-renderer": "^2.3.3",
-    "vuex": "^2.3.1",
-    "vuex-router-sync": "^4.1.2"
+    "koa": "^2.5.3",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.17",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "autoprefixer": "^7.0.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "case-sensitive-paths-webpack-plugin": "^2.3.0",
-    "co": "^4.6.0",
-    "css-loader": "^0.28.1",
-    "cz-conventional-changelog": "^2.0.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-html-reporter": "^0.5.2",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-vue": "^2.0.1",
-    "expect.js": "^0.3.1",
-    "extract-css-chunks-webpack-plugin": "^4.7.5",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "format-webpack-stats-errors-warnings": "^2.1.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "fs-extra": "^3.0.1",
-    "ghooks": "^2.0.0",
-    "html-minifier": "^3.4.4",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "ip": "^1.1.5",
-    "koa-static": "^5.0.0",
-    "koa-webpack-dev-middleware": "^2.0.2",
-    "koa-webpack-hot-middleware": "^1.0.3",
-    "mocha": "^5.2.0",
-    "nodemon": "^2.0.4",
-    "nyc": "^13.1.0",
-    "open": "^7.2.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "rimraf": "^2.6.1",
-    "source-list-map": "^2.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "sw-precache-webpack-plugin": "^0.11.5",
-    "url-loader": "^0.5.8",
-    "validate-commit-msg": "^2.12.1",
+    "postcss": "^7.0.5",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
     "vue-loader": "^15.4.2",
-    "vue-loader-plugin": "^1.3.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.26.1",
+    "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
+    "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
   }
