--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^7.0.2",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^2.0.4",
     "postcss": "^7.0.5",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.0",
