--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
-    "dev": "webpack-dev-server",
+    "dev": "cross-env NODE_ENV=development nodemon server/server.js",
+    "start": "cross-env NODE_ENV=production nodemon server/server.js",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "webpack --config config/webpack.client.config.js",
-    "build:server": "webpack --config config/webpack.server.config.js"
+    "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.client.config.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.server.config.js"
   },
   "author": "",
   "license": "MIT",
