--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "moment": "^2.29.1",
+    "open": "^7.3.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.17",
@@ -33,13 +34,19 @@
     "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^7.0.2",
     "css-loader": "^1.0.0",
+    "extract-css-chunks-webpack-plugin": "^4.7.5",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "koa-webpack-dev-middleware": "^2.0.2",
+    "koa-webpack-hot-middleware": "^1.0.3",
     "nodemon": "^2.0.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^7.0.5",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.0",
