--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "cross-env NODE_ENV=development nodemon server/server.js",
     "start": "cross-env NODE_ENV=production nodemon server/server.js",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.client.config.js",
-    "build:server": "cross-env NODE_ENV=production webpack --config config/webpack.server.config.js"
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "author": "",
   "license": "MIT",
